--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,21 @@
 {
   "name": "core",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
+    "start": "node --experimental-modules index.mjs",
+    "dev": "nodemon index.mjs --exec \"node --experimental-modules\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "plugin-analyze": "^0.0.1",
     "rxjs": "^5.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
