--- a/packages/plugin-analyze/package.json
+++ b/packages/plugin-analyze/package.json
@@ -1,8 +1,8 @@
 {
   "name": "plugin-analyze",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
