pseudo-async loading of plugins

--- a/packages/plugin-analyze/package.json
+++ b/packages/plugin-analyze/package.json
@@ -2,7 +2,7 @@
   "name": "plugin-analyze",
   "version": "0.0.1",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
