--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,10 +2,10 @@
   "name": "core",
   "version": "0.0.1",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
-    "start": "node --experimental-modules index.mjs",
-    "dev": "nodemon index.mjs --exec \"node --experimental-modules\"",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "plugin-analyze": "^0.0.1",
+    "plugin-optimize": "^0.0.1",
     "rxjs": "^5.5.2"
   },
   "devDependencies": {
