--- a/packages/plugin-optimize/package.json
+++ b/packages/plugin-optimize/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bunyan": "^1.8.12"
+  }
 }
