--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,20 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js | bunyan",
-    "dev": "nodemon -w \"../**/*.js\" --exec \"node index.js | bunyan\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bunyan": "^1.8.12",
     "plugin-analyze": "^0.0.1",
     "plugin-optimize": "^0.0.1",
-    "rxjs": "^5.5.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
+    "rxjs": "^5.5.2",
+    "utils": "^0.0.1"
   }
 }
