--- a/packages/plugin-analyze/package.json
+++ b/packages/plugin-analyze/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bunyan": "^1.8.12"
+    "rxjs": "^5.5.2",
+    "utils": "^0.0.1"
   }
 }
