--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-optimize",
+  "name": "utils",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^5.5.2",
-    "utils": "^0.0.1"
+    "bunyan": "^1.8.12"
   }
 }
